--- a/styles/new.css
+++ b/styles/new.css
@@ -101,3 +101,129 @@ header{
     padding-right: 150px;
     padding-top: 60px;
 }
+/* section 3 design  */
+.sec3{
+    text-align: center;
+    padding: 30px;
+    font-size: 15px;
+    background-color: rgb(232, 201, 191);
+    margin-top: 40px;
+    margin-left: 30px;
+    margin-right: 30px;
+    border-radius: 1.5%;
+}
+.span1{
+    color: red;
+}
+.btn3{
+    background-color: orangered;
+    border: 0;
+    padding: 15px;
+    border-radius: 5%;
+    color: white;
+}
+/* section 4 desig */
+.nav1{
+    display: flex;
+    padding-bottom: 0%;
+}
+.div3{
+    padding-top: 100px;
+    padding-left: 150px;
+    padding-right: 0px;
+}
+.div4{
+    padding-left: 0%;
+    margin-left: 0%;
+    padding-right: 0px;
+}
+.div5{
+    padding-top: 100px;
+    padding-left: 0px;
+    padding-right: 150px;
+}
+.head4{
+    color: red;
+    margin-bottom: 0%;
+}
+.title3{
+    font-size: 40px;
+    font-weight: 700;
+    margin: 0%;
+}
+.para3{
+    color: darkgrey;
+}
+.img3{
+    margin: 0%;
+    padding: 0%;
+    width: 500px;
+    position: relative;
+    right: 30px;
+}
+.head5{
+    color: red;
+}
+.para4{
+    color: darkgray;
+}
+.img4{
+    position: relative;
+    top: -250px;
+    left: 1020px;
+}
+/* section 5 design */
+.div7{
+    text-align: center;
+    padding-left: 200px;
+    padding-right: 200px;
+    padding-top: 0%;
+    margin-top: 0%;
+}
+.head6{
+    padding-top: 0%;
+}
+.title5{
+    font-size: 50px;
+    padding: 0;
+    margin: 0;
+}
+.span3{
+    color: red;
+}
+.para6{
+    color: darkgray;
+}
+.nav3{
+    display: flex;
+    padding-left: 130px;
+    padding-right: 130px;
+    padding-top: 10px;
+}
+.img5{
+    width: 400px;
+    position: relative;
+    top: 50px;
+    right: -150px;
+    z-index: 1;
+    
+}
+.img6{
+    width: 300px;
+    position: relative;
+    top: 0px;
+    left: 250px;
+}
+.img7{
+    width: 150px;
+    position: relative;
+    top: 100px;
+    right: 130px;
+}
+.img8{
+    height: 100px;
+    width: 800px;
+    position: relative;
+    top: 300px;
+    right: 700px;
+}
