--- a/styles/new.css
+++ b/styles/new.css
@@ -65,7 +65,7 @@ header{
     padding-bottom: 40px;
     display: flex;
     justify-content: center;
-    margin-right: 30px;
+    /* margin-right: 30px; */
     border-radius: 1.5%;
 }
 .head2{
